Using Java 8 methods instead of higher version and removed unwanted annotations